white space problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,8 @@ body {
     text-wrap: balance;
   }
 }
+
+.ProseMirror * {
+  white-space: normal;
+  word-break: break-word;
+}
